production: version 1.0.3 - fixed unnecessary horizontal scroll

--- a/frontend/components/Drawer/Drawer.module.scss
+++ b/frontend/components/Drawer/Drawer.module.scss
@@ -16,6 +16,7 @@
     box-shadow: var(--main-shadow);
     border-radius: 30px 30px 0 0;
     overflow-y: auto;
+    overflow-x: hidden;
     box-sizing: border-box;
 
     .drawerTop {
